--- a/style.css
+++ b/style.css
@@ -10,12 +10,21 @@
 
 .banner1{
     width: 100%;
-    height: 90vh;
+    height: 100%;
     background-color: #6EBA93;
     background-image: url(./public/hero.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 5%;
+}
+
+
+.banner1-a{
+    width: 100%;
+    height: 100%;
+    padding-bottom: 5%;
+
 }
 
 .subbanner1{
@@ -24,6 +33,8 @@
    border-radius: 20px;
    background-color: rgba(66, 122, 111, 0.49);
     margin-top: 70px;
+    margin-bottom: 70px;
+    padding-bottom: 4%
 }
 
 .title-1{
@@ -32,3 +43,382 @@
     font-style: normal;
     line-height: normal;
 }
+
+.section2{
+    width: 100%;
+    height: 80%;
+    margin-top: 2%;
+    margin-bottom: 8%;
+}
+
+.subsection2{
+    width: 90%;
+}
+
+.card1{
+    width: 380px;
+    height: 100%;
+    border-radius: 30px;
+    border: 1px solid rgba(110, 186, 147, 0.52);
+    background-color: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(110, 186, 147, 0.25);
+}
+
+.title-2{
+    color: #519597;
+    font-size: 60px;
+    font-style: normal;
+    line-height: normal;
+}
+
+.card2{
+    width: 320px;
+    height: 500px;
+}
+
+.subsection3{
+    width: 90%;
+}
+
+.circle-1{
+    width: 200.184px;
+    height: 200.184px;
+    background-color: #6EBA93;
+    border-radius: 50%;
+}
+
+.subcard2{
+    width: 320px;
+    height: 188px;
+    border-radius: 15px;
+    border: 1px solid rgba(111, 186, 147, 0.47);
+    background: #FFF;
+    box-shadow: 0px 4px 9px 1px rgba(110, 183, 186, 0.22);
+}
+
+.section3{
+    width: 100%;
+    height: 80%;
+    margin-top: 2%;
+    margin-bottom: 8%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+
+.section4{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(66, 122, 111, 0.65) 0%, rgba(66, 122, 111, 0.65) 100%), url(./public/mansola.png), lightgray 50% / cover no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+    .section4{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
+.subsection4{
+    width: 75%;
+}
+
+.subsection4circle{
+    width: 25%;
+}
+
+@media (max-width: 600px) {
+
+    .subsection4circle{
+    width: 100%;
+}
+}
+
+@media (max-width: 600px) {
+    .subsection4{
+        width: 100%;
+    }
+    
+}
+
+.title-3{
+    color: #FFF;
+    font-size: 45px;
+    font-style: normal;
+    line-height: normal;
+}
+
+.card3{
+    width: 209px;
+    height: 200px;
+    
+}
+
+.numbers{
+    font-size: 38px;
+    font-style: normal;
+    line-height: normal;
+    color: white;
+}
+
+.button2{
+    display: inline-flex;
+    padding: 7px 18px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 37px;
+    background: #6EBA93;
+}
+
+.section5{
+    width: 100%;
+    height: 100%;
+}
+
+.subsection5{
+    background-image: url(./public/background2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 80%;
+    border-radius: 25px;
+    color: white;
+    height: 500px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 30px;
+    width: 40%;
+}
+
+.subsection6{
+    width: 594px;
+    height: 100%;
+    border-radius: 20px;
+    background: rgba(110, 186, 147, 0.30);
+}
+
+
+
+@media (max-width: 600px) {
+    .subsection6{
+        height: 80%;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .service{
+        padding-bottom: 8%;
+    }
+    
+}
+
+
+
+
+.subsection6-1{
+    height: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.subcards-1{
+    border-radius: 20px;
+    border: 1px solid rgba(110, 186, 147, 0.52);
+    background: #FFF;
+    box-shadow: 0px 4px 5px 1px rgba(111, 186, 147, 0.15);
+    height: 80px;
+}
+
+
+@media (max-width: 600px) {
+    .subcards-1{
+        height: 100%;
+        padding: 10%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+}
+
+
+.section6{
+    width: 100%;
+    height: 100%;
+    margin-top: 5%;
+}
+
+.subsection5-1{
+    height: 100%;
+}
+
+.subtitle-2{
+    color: #519597;
+    font-size: 40px;
+    font-style: normal;
+    line-height: normal;
+}
+
+@media (max-width: 600px) {
+    .lightlamp{
+        height: 100%;
+        width: 100%;
+    }
+    
+}
+
+
+.brands{
+    background-image: url(./public/brands.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 80%;
+    border-radius: 25px;
+    color: white;
+    height: 500px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 30px;
+    width: 40%;
+}
+
+.section7{
+    display: flex; 
+    flex-wrap: wrap;
+
+}
+
+@media (max-width: 600px) {
+    .section7{
+        display: flex; 
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    
+    }
+}
+
+.qbrands{
+    color: #519597; font-size: 35px; font-style: normal; line-height: normal; padding-left: 30%;
+}
+
+@media (max-width: 600px) {
+    .qbrands{
+        padding-left: 2%;
+
+    
+    }
+}
+
+.subtitle-3{
+     font-size: 15px; font-style: normal; line-height: normal; padding-left: 30%;
+}
+
+@media (max-width: 600px) {
+    .subtitle-3{
+        padding-left: 2%;
+
+    
+    }
+}
+
+
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    width: 100%;
+    
+   
+  }
+  
+  .tab button.active::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 5px; /* Adjust the thickness of the line */
+    background-color: #427A6F; /* Color of the line */
+    bottom: 0;
+    left: 0;
+  }
+
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    position: relative; 
+    border-radius: 4px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: inherit;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    
+    border-top: none;
+  }
+
+  .acc-card-1{
+    width: 271.684px;
+    height: 356px;
+    border-radius: 35px;
+    border: 3px solid #6EBA93;
+    background: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+/* 
+  .solarback{
+    background-image: url(./public/solarback.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  } */
+
+
+  .section8{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
